[bphh-1516] Add external api for integration mapping and add documentation
